--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node app.js",
+        "start-dev": "node app.js",
+        "start": "pm2 start app.js -i 4 --deep-monitoring --attach",
         "server": "nodemon app.js",
-        "client": "npm start --prefix client",
+        "client": "npm start --prefix frontend",
         "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
     },
     "author": "Smith Gajjar",
     "license": "ISC",
     "dependencies": {
-
         "bcrypt": "^4.0.1",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
@@ -22,7 +22,8 @@
         "express-graphql": "^0.9.0",
         "graphql": "^15.0.0",
         "jsonwebtoken": "^8.5.1",
-        "mongoose": "^5.9.9"
+        "mongoose": "^5.9.9",
+        "pm2": "^4.5.6"
     },
     "devDependencies": {
         "nodemon": "^2.0.3"
